# opengl-ray-traced-scene

./: .gitignore  CMakeLists.txt  LICENSE  README.md
OpenGLProject/: OpenGLProject.sln
OpenGLProject/OpenGLProject/: OpenGLProject.vcxproj  OpenGLProject.vcxproj.filters
OpenGLProject/OpenGLProject/Debug/: OpenGLProject.exe.recipe  OpenGLProject.ilk  vc142.idb
OpenGLProject/OpenGLProject/Debug/OpenGLProject.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  OpenGLProject.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
src/: CMakeLists.txt  Cone.cpp  Cone.h  Cylinder.cpp  Cylinder.h  Plane.cpp  Plane.h  Ray.cpp  Ray.h  RayTracer.cpp  SceneObject.cpp  SceneObject.h  Sphere.cpp  Sphere.h
